--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
  
 </body>
  
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="bundle.js"></script>
 </html>
